# psh

./: .actrc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.ci  FIXES_APPLIED.md  FRONTEND_REVIEW.md  IMPLEMENTATION.md  README.md  docker-compose.yml  go.mod  go.sum
.cargo/: config.toml
.gitea/workflows/: build.yml
.github/workflows/: build.yml
cmd/psh/: main.go
docs/: CI_CD_SETUP.md  MOBILE_TOUCH_ISSUES.md
internal/audit/: logger.go
internal/auth/: auth.go  ratelimit.go  session_manager.go
internal/config/: config.go
internal/server/: handlers.go  middleware.go  middleware_ratelimit.go  server.go  websocket.go
internal/shell/: session.go
pkg/tls/: cert.go
src/: audit.rs  auth.rs  config.rs  main.rs  ssh.rs
static/: app.js  embed.go  index.html
static/xterm/: xterm-addon-fit.esm.js  xterm.esm.js
