[package]
name = "psh"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# WebSocket
tokio-tungstenite = "0.21"

# SSH client (pure Rust, no C deps)
russh = "0.43"
russh-keys = "0.43"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT authentication
jsonwebtoken = "9"

# Base64 encoding
base64 = "0.22"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# TLS / HTTPS
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.12"

# Async utilities
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
envy = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# URL encoding
urlencoding = "2.1"

# Async trait
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "psh"
path = "src/main.rs"
